--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,30 +1,32 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-      package="com.androidxyq"
-      android:versionCode="1"
-      android:versionName="1.0">
-    <application android:label="@string/app_name" >
-        <activity android:name=".XYQActivity"
-                  android:configChanges="orientation|keyboardHidden"
-                  android:label="@string/app_name">
+        package="com.androidxyq"
+        android:versionCode="1"
+        android:versionName="1.0">
+
+    <application android:label="@string/app_name">
+        <activity
+                android:name=".XYQActivity"
+                android:configChanges="orientation|keyboardHidden"
+                android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".AVGActivity"
-                  android:configChanges="orientation|keyboardHidden"
-                  android:label="AVGTest">
-        </activity>
-        <activity android:name=".SpriteActivity"
-                  android:configChanges="orientation|keyboardHidden"
-                  android:label="SpriteTest">
-        </activity>
-        <activity android:name=".BattleActivity"
-                  android:configChanges="orientation|keyboardHidden"
-                  android:label="BattleTest">
-        </activity>
+        <activity
+                android:name=".AVGActivity"
+                android:configChanges="orientation|keyboardHidden"
+                android:label="AVGTest"></activity>
+        <activity
+                android:name=".SpriteActivity"
+                android:configChanges="orientation|keyboardHidden"
+                android:label="SpriteTest"></activity>
+        <activity
+                android:name=".BattleActivity"
+                android:configChanges="orientation|keyboardHidden"
+                android:label="BattleTest"></activity>
     </application>
-    <uses-sdk android:minSdkVersion="8"/>
+    <uses-sdk android:minSdkVersion="8" />
 
 </manifest>
