--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,7 +5,7 @@ android {
     buildToolsVersion "30.0.3"
 
     defaultConfig {
-        applicationId "com.androidxyq"
+        applicationId "cn.misection.dreamwest"
         minSdkVersion 8
         targetSdkVersion 30
     }
